welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:27: error: not found: value A
    setCouleurBrosse(A)
                     ^